<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="joda_time_android_date_time">%1$s, %2$s</string>
    <string name="joda_time_android_preposition_for_date">on %s</string>
    <string name="joda_time_android_preposition_for_time">at %s</string>
    <string name="joda_time_android_relative_time">%1$s, %2$s</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="EXTENDED">EXTENDED</string>
    <string name="accessibility_service_description">Pebble\'s accessibility service is required to provide notification support for third-party Android applications.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_completed">Completed</string>
    <string name="action_dismissed">Dismissed</string>
    <string name="action_done">Done</string>
    <string name="action_muted">Muted</string>
    <string name="action_opened_on_phone">Opened\non phone</string>
    <string name="action_postponed">Postponed</string>
    <string name="action_removed">Removed</string>
    <string name="action_sent">Sent</string>
    <string name="action_unmuted">Unmuted</string>
    <string name="actionbar_add">Add</string>
    <string name="actionbar_help">Help</string>
    <string name="actionbar_manage_connection">Manage Pebble</string>
    <string name="actionbar_search">Search</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_support">Support</string>
    <string name="additional_font_pack">Additional Font Pack</string>
    <string name="additional_font_pack_none">None</string>
    <string name="alerts">Alerts</string>
    <string name="an_image">an image </string>
    <string name="app_archive_title">NOT ON WATCH</string>
    <string name="app_install_unsuccessful">App install unsuccessful. Try again.</string>
    <string name="app_name">Pebble</string>
    <string name="app_not_supported_apps_title">UNSUPPORTED APPS</string>
    <string name="app_not_supported_watchfaces_title">UNSUPPORTED WATCHFACES</string>
    <string name="app_store">App Store</string>
    <string name="app_store_add_locker_failed">LOADING APP FAILED</string>
    <string name="app_store_add_locker_success">ADDED APP</string>
    <string name="app_store_get">GET</string>
    <string name="app_update_available">Android app update available!</string>
    <string name="battery_life">Battery Life</string>
    <string name="bt_reset_notification_content">Pebble cannot connect until bluetooth has been reset - please turn bluetooth off and then on again</string>
    <string name="bt_reset_notification_title">Reset bluetooth to connect to Pebble</string>
    <string name="calendar_disable_all">DISABLE ALL</string>
    <string name="calendar_enable_all">ENABLE ALL</string>
    <string name="calories">Calories</string>
    <string name="cancel">Cancel</string>
    <string name="canned_responses_header">Customize your notification responses below. The canned messages will appear on your Pebble when notifications have a \"Reply\" action.</string>
    <string name="canned_responses_hint">Type something here</string>
    <string name="canned_responses_reset">RESET</string>
    <string name="canned_responses_title">Notification Responses</string>
    <string name="centimeter_format">%s cm</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="choose_your_issue_category">Choose your issue category</string>
    <string name="click_to_log_in">Click to log in</string>
    <string name="click_to_log_out">- click to log out</string>
    <string name="complete_reminder_title_prefix">DONE</string>
    <string name="connecting_to_pebble">Connecting to Pebble…</string>
    <string name="fw_update_continue">CONTINUE</string>
    <string name="height_weight_dialog_label_feet">ft</string>
    <string name="height_weight_dialog_label_inches">in</string>
    <string name="height_weight_dialog_label_units">Units</string>
    <string name="height_weight_dialog_label_value">Value</string>
    <string name="kill_switch_get_now">GET NOW</string>
    <string name="kill_switch_title">NEW PEBBLE APP</string>
    <string name="kill_swtich_explanation">Please download our new app on the Google Play store.</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="no_internet_connection_refresh">Refresh</string>
    <string name="no_internet_connection_subtext">You are not connected to Internet. Please connect to the Internet and try again.</string>
    <string name="notification_demo_email">EMAIL</string>
    <string name="notification_demo_phone_call">PHONE CALL</string>
    <string name="notification_demo_send_sample_notifications">Try sending sample notifications to your Pebble</string>
    <string name="notification_demo_text_message">TEXT MESSAGE</string>
    <string name="onboarding_banner_test_notifications">TEST NOTIFICATIONS</string>
    <string name="onboarding_choose_language_title">CHOOSE VOICE LANGUAGE</string>
    <string name="onboarding_continue_button_text">CONTINUE</string>
    <string name="onboarding_enable_activity_tracking_button_text">ENABLE</string>
    <string name="onboarding_enable_health_explanation">Welcome to Pebble Health!\nHere we\'ll track your sleep and activity so you can become a better you.</string>
    <string name="onboarding_enable_health_title">PEBBLE HEALTH</string>
    <string name="onboarding_hrm_continue_button">CONTINUE</string>
    <string name="onboarding_hrm_explanation">Pebble monitors your heart rate all day and night so you can work out smarter, check out your stats, and learn more about yourself.</string>
    <string name="onboarding_hrm_title">HEART RATE</string>
    <string name="onboarding_language_spinner_title">Language</string>
    <string name="onboarding_migration_agreement_banner">YIPPEE!</string>
    <string name="onboarding_migration_agreement_msg">You\'re all set to run the new Pebble OS equipped with timeline and a bunch of other awesome Pebble features.</string>
    <string name="onbording_continue">CONTINUE</string>
    <string name="onbording_get_pebble_classic">GET PEBBLE CLASSIC</string>
    <string name="onbording_update_my_pebble">UPDATE MY PEBBLE</string>
    <string name="plug_in_charger_banner">WARNING</string>
    <string name="plug_in_charger_msg">Please triple check that your Pebble is charging during this update! if not, your watch could get damaged</string>
    <string name="plug_in_charger_title">PLUG IN A CHARGER</string>
    <string name="sms_customize">Customize</string>
    <string name="sms_favorites">Pebble Favorites</string>
    <string name="sms_templates_title">Canned Messages</string>
</resources>