<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/container" android:background="@color/onboarding_background_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.getpebble.android.widget.PebbleTextView android:id="@id/onboarding_banner" android:text="@string/onboarding_migration_agreement_banner" android:layout_alignParentTop="true" style="@style/OnboardBanner" />
    <ImageView android:id="@id/watch_image" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:src="@drawable/fu_timeline_tintin" android:layout_below="@id/onboarding_banner" />
    <LinearLayout android:orientation="vertical" android:id="@id/button_area" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_alignParentBottom="true">
        <com.getpebble.android.widget.PebbleButton android:id="@id/update_my_pebble_button" android:layout_marginBottom="10dp" android:text="@string/onbording_update_my_pebble" style="@style/OnboardOrangeButtonCustom" />
        <com.getpebble.android.widget.PebbleButton android:id="@id/get_pebble_classic_button" android:text="@string/onbording_get_pebble_classic" style="@style/OnboardOrangeButtonCustomGray" />
    </LinearLayout>
    <com.getpebble.android.widget.PebbleTextView android:textSize="16sp" android:textColor="@color/light_gray_alt3" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/model_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp" android:minHeight="50sp" android:text="@string/onboarding_migration_agreement_msg" android:layout_above="@id/button_area" android:layout_below="@id/watch_image" />
</RelativeLayout>
