<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/onboarding_firmware_update_layout" android:background="@color/onboarding_background_gray" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@id/onboarding_banner" android:text="@string/plug_in_charger_banner" android:layout_alignParentTop="true" style="@style/OnboardBanner" />
    <ImageView android:id="@id/update_icon" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/fu_charger" android:layout_above="@id/firmware_text_area" android:layout_below="@id/onboarding_banner" android:layout_centerHorizontal="true" android:layout_alignWithParentIfMissing="true" />
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@id/firmware_text_area" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:layout_above="@id/continue_btn">
        <com.getpebble.android.widget.PebbleTextView android:textSize="22sp" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/firmware_update_title" android:layout_marginBottom="10dp" android:text="@string/plug_in_charger_title" style="@style/OnboardWhiteTextView" />
        <com.getpebble.android.widget.PebbleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/firmware_update_text" android:text="@string/plug_in_charger_msg" style="@style/OnboardGrayTextView" />
    </LinearLayout>
    <ProgressBar android:id="@id/onboarding_firmware_install_progress" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x7f0900ea" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_install_progress_margin_top" android:indeterminate="false" android:indeterminateOnly="false" android:layout_below="@id/firmware_text_area" android:layout_centerHorizontal="true" style="@*style/Widget.Holo.ProgressBar.Horizontal" />
    <com.getpebble.android.widget.PebbleButton android:id="@id/continue_btn" android:text="@string/fw_update_continue" android:layout_above="@id/fw_update_lower_btn" android:layout_alignWithParentIfMissing="true" style="@style/OnboardOrangeButton" />
</RelativeLayout>
