<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.getpebble.android.widget.PebbleTextView android:textSize="14sp" android:textColor="@color/sms_fave_text_header" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:paddingLeft="16dp" android:paddingTop="20dp" android:paddingRight="16dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sms_templates_title" android:textAllCaps="true" />
    <com.getpebble.android.widget.PebbleTextView android:textSize="16sp" android:textColor="@color/black" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/sms_templates_btn" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090116" android:text="@string/sms_customize" />
    <View android:background="@color/black" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:alpha="0.1" />
    <com.getpebble.android.widget.PebbleTextView android:textSize="14sp" android:textColor="@color/sms_fave_text_header" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:paddingLeft="16dp" android:paddingTop="35dp" android:paddingRight="16dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sms_favorites" android:textAllCaps="true" />
</LinearLayout>
