<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/onboarding_background_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@id/hrm_onboarding_banner" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.getpebble.android.widget.PebbleTextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="16dp" android:layout_width="UNKNOWN_DATA_0x1" android:text="@string/onboarding_hrm_title" android:layout_weight="1.0" style="@style/OnboardBanner" />
    </LinearLayout>
    <ImageView android:id="@id/hrm_onboarding_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_activity_tracking_margin_large" android:src="@drawable/fu_heart" android:layout_below="@id/hrm_onboarding_banner" android:layout_centerHorizontal="true" />
    <com.getpebble.android.widget.PebbleTextView android:id="@id/hrm_onboarding_text" android:layout_marginTop="@dimen/onboarding_activity_tracking_margin_large" android:text="@string/onboarding_hrm_explanation" android:layout_below="@id/hrm_onboarding_icon" android:layout_centerHorizontal="true" style="@style/OnboardGrayTextView" />
    <Button android:id="@id/hrm_onboarding_continue_button" android:layout_marginTop="16dp" android:text="@string/onboarding_hrm_continue_button" android:layout_alignParentBottom="true" style="@style/OnboardOrangeButton" />
</RelativeLayout>
