<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/my_pebble_dashboard_text_size" android:id="@id/kill_switch_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/kill_switch_margin" android:layout_marginTop="@dimen/kill_switch_margin_top" android:layout_marginBottom="@dimen/kill_switch_margin_bottom" android:text="@string/kill_switch_title" />
    <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/my_pebble_dashboard_text_size" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/kill_switch_explanation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/kill_switch_margin" android:layout_marginRight="@dimen/kill_switch_margin" android:layout_marginBottom="@dimen/kill_switch_margin_bottom" android:text="@string/kill_swtich_explanation" />
    <com.getpebble.android.widget.PebbleButton android:textSize="@dimen/my_pebble_dashboard_text_size" android:id="@id/kill_switch_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/kill_switch_margin" android:layout_marginTop="0dp" android:text="@string/kill_switch_get_now" style="@style/OnboardOrangeButton" />
</LinearLayout>
