<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/onboarding_background_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@id/health_onboarding_banner" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.getpebble.android.widget.PebbleTextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="16dp" android:layout_width="UNKNOWN_DATA_0x1" android:text="@string/onboarding_enable_health_title" android:layout_weight="1.0" style="@style/OnboardBanner" />
        <TextView android:id="@id/health_onboarding_skip_button" android:layout_width="wrap_content" style="@style/OnboardSkipButton" />
    </LinearLayout>
    <ImageView android:id="@id/health_onboarding_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_activity_tracking_margin_large" android:src="@drawable/fu_health_main" android:layout_below="@id/health_onboarding_banner" android:layout_centerHorizontal="true" />
    <com.getpebble.android.widget.PebbleTextView android:id="@id/enable_health_onboarding_text" android:layout_marginTop="@dimen/onboarding_activity_tracking_margin_large" android:text="@string/onboarding_enable_health_explanation" android:layout_below="@id/health_onboarding_icon" android:layout_centerHorizontal="true" style="@style/OnboardGrayTextView" />
    <com.getpebble.android.widget.PebbleTextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/enable_health_privacy_policy" android:visibility="invisible" android:layout_marginTop="@dimen/onboarding_activity_tracking_margin_large" android:layout_above="@id/activity_tracking_enable_button" android:layout_centerHorizontal="true" style="@style/OnboardGraySmallTextView" />
    <Button android:id="@id/activity_tracking_enable_button" android:layout_marginTop="16dp" android:text="@string/onboarding_enable_activity_tracking_button_text" android:layout_alignParentBottom="true" style="@style/OnboardOrangeButton" />
</RelativeLayout>
