<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/onboarding_background_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@id/onboarding_banner_voice" android:visibility="visible" android:text="@string/onboarding_choose_language_title" android:layout_alignParentTop="true" style="@style/OnboardBanner" />
    <ImageView android:id="@id/choose_language_image" android:background="@drawable/fu_lang" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_icon_margin_top_bottom" android:layout_marginBottom="@dimen/onboarding_icon_margin_top_bottom" android:layout_below="@id/onboarding_banner_voice" android:layout_centerHorizontal="true" />
    <Spinner android:id="@id/language_spinner" android:background="@color/onboarding_background_gray" android:layout_width="UNKNOWN_DATA_0x7f0900f2" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_spinner_margin_left" android:layout_marginRight="@dimen/onboarding_spinner_margin" android:layout_below="@id/choose_language_image" android:layout_alignParentRight="true" android:spinnerMode="dropdown" />
    <View android:background="@color/onboarding_light_grey_text" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginLeft="@dimen/onboarding_spinner_margin" android:layout_marginRight="@dimen/onboarding_spinner_margin" android:layout_below="@id/language_spinner" />
    <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/onboarding_new_text_size" android:textColor="@color/onboarding_text_gray" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/language_spinner_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_spinner_margin" android:text="@string/onboarding_language_spinner_title" android:layout_below="@id/choose_language_image" android:layout_alignBottom="@id/language_spinner" android:layout_alignParentLeft="true" />
    <com.getpebble.android.widget.PebbleButton android:id="@id/continue_language_button" android:text="@string/onboarding_continue_button_text" android:layout_alignParentBottom="true" style="@style/OnboardOrangeButton" />
</RelativeLayout>
