<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@color/dark_gray_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/connectionErrorImage" android:padding="25dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/illustration_sad_cloud" android:scaleType="fitCenter" android:contentDescription="@string/no_internet_connection" />
    <com.getpebble.android.widget.PebbleTextView android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/textConnectionErrorTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/no_internet_connection" style="@style/OnboardStyle" />
    <com.getpebble.android.widget.PebbleTextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/textConnectionErrorSubtitle" android:padding="@dimen/no_internet_connection_subtext_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/no_internet_connection_subtext" style="@style/OnboardStyle.Small" />
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@id/refreshLayout" android:padding="@dimen/android_app_view_label_textSize" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/refreshImage" android:background="0x106000d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_action_refresh" />
        <com.getpebble.android.widget.PebbleTextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/tapToRefreshTextView" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_internet_connection_refresh" style="@style/OnboardStyle.Medium" />
    </LinearLayout>
</LinearLayout>
